--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,9 @@
 }
 
 .App-logo {
+  animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -35,4 +30,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+body {
+  background-color: black;
+  color: white;
 }
