configuration of contact and resume pages

--- a/src/components/Card/style.css
+++ b/src/components/Card/style.css
@@ -1,3 +1,11 @@
 .card {
     color: black;
+    float: left;
+    margin: 30px;
+}
+
+h5 {
+    text-align: center;
+    background-color: blue;
+    color: white;
 }
