--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,14 +1,8 @@
 .footer {
-  min-height: 100px;
   background: #e5e5e5;
-  position: relative;
+  position: fixed; 
+  bottom: 0; 
+  width: 100%
 }
 
-.footer span {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding: 3px;
-  background: #b8b8b8;
-}
+
