--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,8 +1,13 @@
 .footer {
-  background: #e5e5e5;
+  background:none;
   position: fixed; 
   bottom: 0; 
-  width: 100%
+  width: 100%;
 }
+
+.footer__social-image {
+  width: 50px;
+}
+
 
 
